# invoice-extraction-vibe-coding

./: .env.template  .gitignore  README.md  app.py  create_agent.py  cursor_prompt.md  pyproject.toml  requirements.txt  sample.py  sample_output.json  sample_schema.json
nextjs_app/: README.md  package.json  pnpm-lock.yaml  sample.py  start.sh  tailwind.config.js
nextjs_app/api/: errors.txt  main.py  requirements.txt
nextjs_app/app/: layout.tsx  page.tsx
sample_data/: sample_schema.py
